@@ -3,6 +3,7 @@ package org.openehr.am.openehrprofile.datatypes.text;
 import java.util.*;
 
 import org.openehr.am.archetype.constraintmodel.CAttribute;
+import org.openehr.rm.datatypes.text.CodePhrase;
 import org.openehr.rm.support.basic.Interval;
 import org.openehr.rm.support.identification.TerminologyID;
 
@@ -23,7 +24,7 @@ public class CCodePhraseTest extends TestCase {
 		TerminologyID terminologyId = null;
 		List<String> codeList = null;
 		CCodePhrase constraint = new CCodePhrase(path, occurrences, nodeId, 
-				parent, terminologyId, codeList);
+				parent, terminologyId, codeList, null, null);
 		assertTrue("anyAllowed expected", constraint.isAnyAllowed());
 	}
 
@@ -37,10 +38,37 @@ public class CCodePhraseTest extends TestCase {
 		codeList.add("total");
 		
 		CCodePhrase constraint = new CCodePhrase(path, occurrences, 
-				nodeId, null, terminologyId, codeList);
+				nodeId, null, terminologyId, codeList, null, null);
 		
 		assertNotNull(constraint);
 		assertFalse("anyAllowed unexpected", constraint.isAnyAllowed());
 		assertEquals("codeList wrong", codeList, constraint.getCodeList());		
+	}
+	
+	public void testValidValue() {
+		String path = "/term_definitions[en]/items[at0001]/text/";
+		Interval<Integer> occurrences = new Interval<Integer>(0, 1);
+		String nodeId = "at0010";
+		TerminologyID terminologyId = new TerminologyID("test");
+		List<String> codeList = new ArrayList<String>();
+		codeList.add("100");
+		codeList.add("101");
+		
+		CCodePhrase constraint = new CCodePhrase(path, occurrences, 
+				nodeId, null, terminologyId, codeList, null, null);
+		
+		assertFalse("expected invalid - both wrong", 
+				constraint.validValue(new CodePhrase("test2", "102")));
+		assertFalse("expected invalid - wrong code", 
+				constraint.validValue(new CodePhrase("test", "102")));
+		assertFalse("expected invalid - wrong terminology", 
+				constraint.validValue(new CodePhrase("test2", "100")));
+		assertFalse("expected invalid - null value",
+				constraint.validValue(null));		
+		
+		assertTrue("expected valid", 
+				constraint.validValue(new CodePhrase("test", "100")));
+		assertTrue("expected valid", 
+				constraint.validValue(new CodePhrase("test", "101")));		
 	}
 }
